--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: AI Chronicle
+description: A collection of AI/ML techniques
 github_username: ansunsujoe
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "ai-chronicle"
@@ -40,7 +40,7 @@ baseurl: "/ai-chronicle" # the subpath of your site, e.g. "/blog".
 minima:
   social_links:
     twitter: fastdotai
-    github: fastai
+    github: ansunsujoe
 
 # Set this to true to get LaTeX math equation support
 use_math: 
